@@ -2,6 +2,8 @@ $Id$
 
 2.0.7-pre-2
 	Don't allow zwrite if zephyr isn't present
+	There is now a zcrypt command
+	Replies to zcrypted messages now work
 	
 2.0.7-pre-1
 	Owl should build now without zephyr, enabling it to act as a
